--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -135,24 +137,24 @@ border-radius: 5px;
 
   }
 /* Style the counter cards */
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    text-align: center;
-    background: linear-gradient(0deg, #20385C 0%, #294D77 105.38%);
-    height: 100%;
-    cursor: pointer;
-    img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-}
+// .card {
+//     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+//     text-align: center;
+//     background: linear-gradient(0deg, #20385C 0%, #294D77 105.38%);
+//     height: 100%;
+//     cursor: pointer;
+//     img {
+//         display: block;
+//         width: 100%;
+//         height: 100%;
+//         object-fit: cover;
+//     }
+// }
 
-.card-img-container {
-    width: 100%;
-    height: 300px;
-}
+// .card-img-container {
+//     width: 100%;
+//     height: 300px;
+// }
 
 .container {
     background: linear-gradient(0deg, #20385C 0%, #294D77 105.38%);
@@ -354,4 +356,70 @@ border-radius: 5px;
 
 .ngx-pagination a, .ngx-pagination button {
     color: #FFFFFF !important;
+}
+
+
+#navbar{
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    padding: .5rem 5rem;
+    box-shadow: 5px 5px 20px rgba(0,0,0,.5);
+    background: black;
+}
+.navbar .navbar-brand{
+    font-size: 25px;
+    font-weight: 800;
+    color: #29f700 !important;
+}
+section{
+    width: 100%;
+}
+.img-fluid {
+    width:100%;
+    height:100%;
+  }
+#heading h1{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 28px;
+    align-items: flex-end;
+    color: #FFFFFF;
+}
+#heading .container-left{
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 42px;
+    display: flex;
+    align-items: flex-end;
+    color: #FFFFFF;
+    position: relative;
+    cursor: pointer;
+     .content {
+        margin-right: 12px;
+    }
+}
+
+#card-section {
+    color: white;
+    margin-top: 40px;
+    .star-average{
+        margin-left: 13px;
+    }
+    .average{
+        margin-right: 60px;
+    }
+    i.fas.fa-play{
+      color: #FF9966; 
+    }
+    .card-body{
+        background: linear-gradient(0deg, #20385C 0%, #294D77 105.38%);
+    }
+    .left-play{
+        margin-left: 100px;
+    }
 }
