--- a/src/app/home/movie-list/movie-list.component.html
+++ b/src/app/home/movie-list/movie-list.component.html
@@ -4,7 +4,7 @@
       <div class="picsum-img-wrapper">
         <img
           class="img-fluid"
-          src="../../../assets/images/banner.jpg"
+          src="../../../assets/images/image1.jpg"
           alt="Random first slide"
         />
       </div>
@@ -13,7 +13,7 @@
       <div class="picsum-img-wrapper">
         <img
           class="img-fluid"
-          src="../../../assets/images/banner.jpg"
+          src="../../../assets/images/image2.jpg"
           alt="Random second slide"
         />
       </div>
@@ -22,7 +22,7 @@
       <div class="picsum-img-wrapper">
         <img
           class="img-fluid"
-          src="../../../assets/images/banner.jpg"
+          src="../../../assets/images/image3.jpg"
           alt="Random third slide"
         />
       </div>
